--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,8 +13,8 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             "args": [
-                "/Users/davidwood/Documents/GitHub/BambuLab/Gcode/Xmas Pud.gcode",
-                "/Users/davidwood/Documents/GitHub/BambuLab/Gcode/"
+                "/Users/davidwood/Documents/GitHub/BambuLab/Gcode/Xmas Pud.gcode.3mf",
+                "/Users/davidwood/Documents/GitHub/BambuLab/Gcode/flush/"
             ]
         }
     ]
