--- a/Gcode/flush/Archive/Sphere 100p.3mf.merged.3mfxx/Metadata/model_settings.config
+++ b/Gcode/flush/Archive/Sphere 100p.3mf.merged.3mfxx/Metadata/model_settings.config
@@ -15,6 +15,15 @@
       <mesh_stat edges_fixed="0" degenerate_facets="0" facets_removed="0" facets_reversed="0" backwards_edges="0" />
     </part>
   </object>
+  <object id="3">
+    <metadata key="name" value="m_Cube" />
+    <metadata key="extruder" value="1" />
+    <part id="1" subtype="normal_part">
+      <metadata key="name" value="m_Cube" />
+      <metadata key="matrix" value="1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 1" />
+      <mesh_stat edges_fixed="0" degenerate_facets="0" facets_removed="0" facets_reversed="0" backwards_edges="0" />
+    </part>
+  </object>
   <plate>
     <metadata key="plater_id" value="1" />
     <metadata key="plater_name" value="" />
@@ -30,26 +39,11 @@
   <model_instance>
       <metadata key="object_id" value="3" />
       <metadata key="instance_id" value="0" />
-      <metadata key="identify_id" value="7748" />
+      <metadata key="identify_id" value="58" />
     </model_instance>
   </plate>
   <assemble>
    <assemble_item object_id="2" instance_id="0" transform="1 0 0 0 1 0 0 0 1 0 0 17.748008728027344" offset="0 0 0" />
-  <assemble_item object_id="3" instance_id="0" transform="1.5 0 0 0 1.5 0 0 0 1.5 0 0 17.748008728027344" offset="0 0 0" />
+  <assemble_item object_id="3" instance_id="0" transform="1 0 0 0 1 0 0 0 1 130 130 12.800000190734863" offset="0 0 0" />
   </assemble>
-<object id="3">
-    <metadata key="name" value="Brown [E1].stl" />
-    <metadata key="extruder" value="1" />
-    <part id="1" subtype="normal_part">
-      <metadata key="name" value="Brown [E1].stl" />
-      <metadata key="matrix" value="1 0 0 -1.9073486299999999e-06 0 1 0 -1.9073486299999999e-06 0 0 1 0 0 0 0 1" />
-      <metadata key="source_file" value="Brown [E1].stl" />
-      <metadata key="source_object_id" value="0" />
-      <metadata key="source_volume_id" value="0" />
-      <metadata key="source_offset_x" value="52.618631362915039" />
-      <metadata key="source_offset_y" value="-57.895124435424805" />
-      <metadata key="source_offset_z" value="5.7480087280273438" />
-      <mesh_stat edges_fixed="0" degenerate_facets="0" facets_removed="0" facets_reversed="0" backwards_edges="0" />
-    </part>
-  </object>
-  </config>
+</config>
