--- a/Gcode/flush/Archive/Sphere 100p.3mf.merged.3mfxx/Metadata/model_settings.config
+++ b/Gcode/flush/Archive/Sphere 100p.3mf.merged.3mfxx/Metadata/model_settings.config
@@ -16,10 +16,10 @@
     </part>
   </object>
   <object id="3">
-    <metadata key="name" value="m_Cube" />
+    <metadata key="name" value="Cube" />
     <metadata key="extruder" value="1" />
     <part id="1" subtype="normal_part">
-      <metadata key="name" value="m_Cube" />
+      <metadata key="name" value="Cube" />
       <metadata key="matrix" value="1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 1" />
       <mesh_stat edges_fixed="0" degenerate_facets="0" facets_removed="0" facets_reversed="0" backwards_edges="0" />
     </part>
