--- a/Gcode/Xmas Pud.gcode.3mfxx/Metadata/project_settings.config
+++ b/Gcode/Xmas Pud.gcode.3mfxx/Metadata/project_settings.config
@@ -149,7 +149,7 @@
     "detect_overhang_wall": "1",
     "detect_thin_wall": "0",
     "different_settings_to_system": [
-        "prime_tower_width;prime_volume;sparse_infill_density;sparse_infill_pattern",
+        "prime_tower_width;prime_volume;sparse_infill_pattern",
         "",
         "",
         "",
@@ -1272,10 +1272,10 @@
     "sparse_infill_acceleration": "100%",
     "sparse_infill_anchor": "400%",
     "sparse_infill_anchor_max": "20",
-    "sparse_infill_density": "100%",
+    "sparse_infill_density": "15%",
     "sparse_infill_filament": "1",
     "sparse_infill_line_width": "0.45",
-    "sparse_infill_pattern": "zig-zag",
+    "sparse_infill_pattern": "gyroid",
     "sparse_infill_speed": "200",
     "spiral_mode": "0",
     "standby_temperature_delta": "-5",
