--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             "args": [
-                "/Users/davidwood/Documents/GitHub/BambuLab/Gcode/SphereU.3mf",
+                "/Users/davidwood/Documents/GitHub/BambuLab/Gcode/Xmas Pud.gcode.3mf",
                 "/Users/davidwood/Documents/GitHub/BambuLab/Gcode/flush/"
             ]
         }
