--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
             "justMyCode": true,
             "args": [
                 "/Users/davidwood/Documents/GitHub/BambuLab/Gcode/Xmas Pud.gcode.3mf",
-                "/Users/davidwood/Documents/GitHub/BambuLab/Gcode/flush/"
+                "/Users/davidwood/Documents/GitHub/BambuLab/Gcode/flush/;/Users/davidwood/Documents/flush/"
             ]
         }
     ]
